hasil akhir presentasi reveal.js

--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -17,14 +17,48 @@
 		<div class="reveal">
 			<div class="slides">
 				<section 
-				data-background-image="https://i.pinimg.com/564x/fc/61/1b/fc611b711a27ddbeb4f5d3473c4c24d0.jpg"data-background-size="700px" ><h1 style="color: yellow; font-family: Times New Roman">Presentasi reveal.js </h1></section>
+				data-background-image=Gambarkost.png data-background-size="1400px" ><h1 style="color: yellow; font-family: Times New Roman;font-size: 50px">Presentasi reveal.js untuk Desain Aplikasi Penyewaan Kost Berbasis Web </h1></section>
 				<section>
-					
-
-				<section data-background-color="blue"> 
-						<h5> Alasan perusahaan NASA menggunakan Node.js</h5>
-						<p style="font-size: 30px"> karena program / aplikasi NASA sangat berkaitan dengan nyawa manusia, bagaimana agar membuat astronot tetap aman dalam melakukan misi-misi ilmiahnya. Dan dengan pengaplikasian NodeJS, mereka berhasil mereduksi jumlah proses step prosedural yang harus mereka lakukan, dari angka 28 menjadi hanya 7 saja</p>
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Latar Belakang </h5>
+						<p style="font-size: 30px">Karena sekarang ini lagi masa masa pandemi untuk mencari sebuah kost itu agak sulit. Oleh
+						karena itu muncul lah ide kami untuk membuat aplikasi kost berbasis web agar mempermudah untuk mencari kost secara online.</p> 
 					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px"> 
+						<h5> Desain Fitur Pada Pengguna</h5>
+						<p style="font-size: 30px;">LOGIN</p>
+						<p style="font-size: 30px;">PILIHAN RUMAH</p>
+						<p style="font-size: 30px;">BLOG</p>
+						<p style="font-size: 30px;">ABOUT</p>
+						<p style="font-size: 30px;">CONTACT</p>
+					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Fitur Login </h5>
+						<img src="login1.png" alt="">
+					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Fitur Pilihan Rumah </h5>
+						<img src="pilihanrumah1.png" alt="">
+					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Fitur Blog </h5>
+						<img src="blog1.png" alt="">
+					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Fitur About </h5>
+						<img src="about1.png" alt="">
+					</section>
+
+					<section data-background-image=background1.jpg data-background-size="1400px">
+						<h5> Fitur Contact </h5>
+						<img src="contact1.png" alt="">
+					</section>
+
 				</section>
 			</div>
 		</div>
